--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -60,6 +60,8 @@ frame-system-benchmarking = { default-features = false, git = "https://github.co
 hex-literal = { version = "0.3.4", optional = true }
 log = { version = "0.4.17", optional = true }
 
+chain-extension-signing = { git = "https://github.com/AstarNetwork/astar-frame", branch = "polkadot-v0.9.37", default-features = false }
+
 [build-dependencies]
 substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
 
@@ -96,6 +98,7 @@ std = [
 	"sp-transaction-pool/std",
 	"sp-version/std",
 	"pallet-chain-extension-assets/std",
+	"chain-extension-signing/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
