--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -27,7 +27,7 @@ pallet-transaction-payment = { default-features = false, git = "https://github.c
 sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
 sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
 sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
-sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
+sc-consensus-manual-seal = { path = "../client/consensus/manual-seal" }
 sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
 sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
 sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
