--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -43,6 +43,7 @@ sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "
 
 # These dependencies are used for the node template's RPCs
 pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
+pallet-balances-rpc = { path = "../frame/balances/rpc" }
 sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
 sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
 sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
