--- a/frame/balances/rpc/Cargo.toml
+++ b/frame/balances/rpc/Cargo.toml
@@ -22,3 +22,9 @@ sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-
 sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
 sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
 sp-weights = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
+sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
+pallet-balances = { path = "../../balances", default-features = false }
+futures = "0.3.21"
+hex = "0.4.3"
+swanky-runtime = { version = "1.6.0", path = "../../../runtime" }
+node-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
