--- a/.github/workflows/checks-and-tests.yaml
+++ b/.github/workflows/checks-and-tests.yaml
@@ -31,9 +31,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install Protoc
-      uses: arduino/setup-protoc@v1
-      with:
-        version: '3.x'
+      run: sudo apt -y install protobuf-compiler
 
     - name: Install & display rust toolchain
       run: rustup show
