Feat/balance manipuration (#67)
* customized balance pallet

* balance rpc

* up

* cargo fmt

* set free balance rpc

* added magic number to set_free_balance unsigned call

* remove next_unsigned_index getter function

* cargo fmt

* up

* updated README

* fix typos

* Detailed balance README

---------

Co-authored-by: PierreOssun <pierre.giraud@mailfence.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 members = [
 	"node",
 	"runtime",
+	"frame/balances",
+	"frame/balances/rpc",
+	"frame/balances/rpc/runtime-api",
 	"client/consensus/manual-seal",
 ]
 exclude = [
