--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -42,6 +42,7 @@ sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "po
 sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
 
 # These dependencies are used for the node template's RPCs
+pallet-balances-rpc = { path = "../frame/balances/rpc" }
 pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
 sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
 sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
