--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -62,7 +62,7 @@ hex-literal = { version = "0.3.4", optional = true }
 log = { version = "0.4.17", optional = true }
 
 [build-dependencies]
-substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
+substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
 
 [features]
 default = [
