--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -17,18 +17,21 @@ targets = ["x86_64-unknown-linux-gnu"]
 name = "swanky-node"
 
 [dependencies]
-clap = { version = "4.0.29", features = ["derive"] }
+clap = { version = "=4.2.5", features = ["derive"] }
+
 futures = { version = '0.3.21' }
 log = { version = "0.4.17" }
 serde_json = "1.0"
 
 frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
+frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43", default-features = false }
 pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
 sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
 sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
 sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
 sc-consensus-manual-seal = { path = "../client/consensus/manual-seal" }
 sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
+sc-network = { git = "https://github.com/paritytech/substrate", package = "sc-network", branch = "polkadot-v0.9.43" }
 sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
 sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
 sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
@@ -40,6 +43,7 @@ sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "
 sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
 sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
 sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
+sp-database = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
 
 # These dependencies are used for the node template's RPCs
 pallet-balances-rpc = { path = "../frame/balances/rpc" }
@@ -53,11 +57,11 @@ sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = 
 substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
 
 # These dependencies are used for runtime benchmarking
-frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43", default-features = false }
 frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
 
 # Local Dependencies
-swanky-runtime = { version = "1.6.0", path = "../runtime" }
+swanky-runtime = { version = "1.7.0", path = "../runtime" }
 
 # RPC related dependencies
 jsonrpsee = { version = "0.16.2", features = ["server"] }
